@@ -1,13 +1,10 @@
 /.cvsignore/1.16/Wed Jan 10 22:51:47 2007//
 /CAS.h/1.2/Thu Nov 12 10:52:43 2009//
-/CHANGES/1.163/Mon Jan 18 19:49:03 2010//
 /COPYING/1.1.1.1/Fri Feb  2 17:54:47 2001//
 /GNUmakefile/1.63/Tue Jan 19 02:40:40 2010//
-/Makefile/1.81/Tue Jan 19 02:41:34 2010//
 /README/1.2/Mon Oct 21 22:35:17 2002//
 /TODO/1.5/Fri Jun 23 03:53:16 2006//
 /array.h/1.7/Thu Jun  3 22:46:59 2010//
-/buffer.h/1.29/Thu Jun  3 22:46:59 2010//
 /byte.h/1.7/Thu Jun  3 22:46:59 2010//
 /case.h/1.7/Thu Jun  3 22:46:59 2010//
 /cdb.h/1.5/Thu Jun  3 22:46:59 2010//
@@ -30,7 +27,6 @@
 /ndelay.h/1.3/Thu Jun  3 22:46:59 2010//
 /open.h/1.5/Thu Jun  3 22:46:59 2010//
 /openreadclose.h/1.4/Thu Jun  3 22:46:59 2010//
-/rangecheck.h/1.13/Thu Jun  3 22:46:59 2010//
 /readclose.h/1.3/Tue Nov  7 17:56:05 2006//
 /safemult.h/1.3/Thu Jun  3 22:46:59 2010//
 /scan.h/1.10/Thu Jun  3 22:46:59 2010//
@@ -58,9 +54,34 @@
 /trysl.c/1.2/Thu Nov  6 20:47:59 2003//
 /trysocket.c/1.1/Thu Jan  8 17:12:39 2004//
 /trysysel.c/1.1/Mon Sep 16 01:09:56 2002//
-/uint16.h/1.10/Thu Jun  3 22:46:59 2010//
-/uint32.h/1.10/Thu Jun  3 22:46:59 2010//
 /uint64.h/1.7/Thu Jun  3 22:46:59 2010//
 /va_narg.h/1.4/Thu Jun  3 22:46:59 2010//
 /windoze.h/1.1/Thu Nov  6 22:43:30 2003//
-D
+D/array////
+D/buffer////
+D/byte////
+D/case////
+D/cdb////
+D/dns////
+D/examples////
+D/fmt////
+D/io////
+D/mmap////
+D/mult////
+D/open////
+D/scan////
+D/socket////
+D/str////
+D/stralloc////
+D/tai////
+D/taia////
+D/test////
+D/textcode////
+D/uint////
+D/unix////
+/CHANGES/1.164/Tue Aug  2 17:31:33 2011//
+/Makefile/1.82/Tue Aug  2 17:31:33 2011//
+/buffer.h/1.29/Fri Jul  9 16:09:04 2010//
+/rangecheck.h/1.14/Tue Aug  2 17:31:33 2011//
+/uint16.h/1.11/Tue Aug  2 17:31:33 2011//
+/uint32.h/1.11/Tue Aug  2 17:31:33 2011//
