@@ -1,22 +1,1 @@
-A D/array////
-A D/buffer////
-A D/byte////
-A D/case////
-A D/cdb////
-A D/dns////
-A D/examples////
-A D/fmt////
-A D/io////
-A D/mmap////
-A D/mult////
-A D/open////
-A D/scan////
-A D/socket////
-A D/str////
-A D/stralloc////
-A D/tai////
-A D/taia////
-A D/test////
-A D/textcode////
-A D/uint////
-A D/unix////
+A D/gatling////
